--- a/components/goods-list/goods-list.wxml
+++ b/components/goods-list/goods-list.wxml
@@ -1,13 +1,15 @@
 <view class="list">
   <view class="item" wx:for="{{goodsData}}" wx:key="index">
-    <view class="goods_img">
-      <image src="{{item.url}}" mode="widthFix" />
-    </view>
-    <view class="goods_info">
-      <text class="goods_name">{{item.title}}</text>
-      <view class="goods_price">
-        ￥<text>{{item.price}}</text>.00
+    <navigator url="/pages/details/details?id={{ item.id }}">
+      <view class="goods_img">
+        <image src="{{item.url}}" mode="widthFix" />
       </view>
-    </view>
-  </view> 
+      <view class="goods_info">
+        <text class="goods_name">{{item.title}}</text>
+        <view class="goods_price">
+          ￥<text>{{item.price}}</text>.00
+        </view>
+      </view>
+    </navigator>
+  </view>
 </view>
